Update to current intellij